# hi

./: .gitignore  README.md  build.gradle  gradlew_backup  settings.gradle
.github/workflows/: build-android.yml
app/: build.gradle  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  game3d_engine.h  game_engine.h  jni_bridge.cpp  math3d.h  mesh.h  renderer3d.h  shaders.h
app/src/main/java/com/racing/game/: FirebaseHelper.java  GameGLView.java  GameRenderer.java  GameUIOverlay.java  GameView.java  LeaderboardActivity.java  MainActivity.java  SoundManager.java
app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  leaderboard_bg.xml  nitro_bg.xml  pause_bg.xml
app/src/main/res/values/: strings.xml  styles.xml
